--- a/frontend/src/pages/adminCreateArt.scss
+++ b/frontend/src/pages/adminCreateArt.scss
@@ -104,7 +104,8 @@
 
       button.general,
       button.create-small-data,
-      button.cancel-form {
+      button.cancel-form,
+      button#send-postcard {
         padding: 2px;
         padding-top: 4px;
         border: 5px double #bc7c61;
@@ -121,6 +122,10 @@
 
       button.general {
         grid-area: 12 / 1 / 12 / span 2;
+      }
+
+      button#send-postcard {
+        grid-area: 4 / 1 / 4 / span 2;
       }
     }
 
@@ -163,7 +168,8 @@
 
         button.general,
         button.create-small-data,
-        button.cancel-form {
+        button.cancel-form,
+        button#send-postcard {
           font-size: 24px;
           width: 40%;
         }
