--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -1,11 +1,12 @@
 .header-big-container {
   height: 48px;
+  background-color: white;
   border-bottom: 2px solid #000000;
   margin-bottom: 24px;
   position: relative;
   display: flex;
   align-items: center;
-  z-index: 2;
+  z-index: 3;
 
   .ruby-background {
     filter: drop-shadow(0px 2px #000000);
@@ -42,24 +43,85 @@
     .logo-AFAC {
       max-height: 42px;
     }
+
     .account {
       margin-left: 40%;
       width: 40px;
     }
-    .icone-burger {
-      cursor: pointer;
-      margin-right: 3%;
-      max-height: 10vw;
-      max-width: 10vw;
-      font-size: 5vh;
+
+    .burger-container {
+      width: 2.75em;
+      height: 3em;
+      display: flex;
+      padding: 0.75em 0.5em;
+
+      @media screen and (min-width: 768px) {
+        width: 4em;
+        height: 4em;
+        margin-right: 1rem;
+      }
+
+      .burger-menu {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+
+        .burger-bar {
+          width: 100%;
+          height: 0.25em;
+          border-radius: 0.5em;
+          background-color: #000000;
+
+          @media screen and (min-width: 768px) {
+            height: 0.4em;
+          }
+        }
+      }
+    }
+
+    /* ---------- Animation ---------- */
+
+    .burger-bar.clicked:nth-child(1) {
+      transform: rotate(45deg) translate(0.5em, 0.65em);
+      transition: ease-in-out 0.5s;
+
+      @media screen and (min-width: 768px) {
+        transform: rotate(45deg) translate(0.8em, 1em);
+      }
+    }
+
+    .burger-bar.clicked:nth-child(2) {
+      transform: scale(0.01);
+      transition: ease-in-out 0.5s;
+    }
+
+    .burger-bar.clicked:nth-child(3) {
+      transform: rotate(135deg) translate(-0.45em, 0.55em);
+      transition: ease-in-out 0.5s;
+
+      @media screen and (min-width: 768px) {
+        transform: rotate(135deg) translate(-0.8em, 1em);
+      }
+    }
+
+    /* ------ Unclicked ------ */
+
+    .burger-bar.unclicked {
+      transform: rotate(0) translate(0);
+      transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 0.5s;
     }
   }
 }
 
 .nav-menu {
-  position: absolute;
+  position: fixed;
   height: 100%;
-  margin-top: 46px;
   z-index: 1;
   background-color: rgba(234, 234, 234, 0.7);
   width: 250px;
@@ -92,6 +154,10 @@
 
 .nav-menu-items {
   width: 100%;
+
+  &:first-child {
+    margin-top: 46px;
+  }
 }
 
 a {
@@ -140,7 +206,9 @@ a {
     margin-right: 1em;
   }
 
-  .nav-menu {
-    margin-top: 115px;
+  .nav-menu-items {
+    &:first-child {
+      margin-top: 115px;
+    }
   }
 }
