--- a/frontend/src/components/LogIn.scss
+++ b/frontend/src/components/LogIn.scss
@@ -56,6 +56,7 @@ div.bg-hexa-bottom {
       border: 2px solid #74658a;
       margin-bottom: 1rem;
       padding: 0 0.5rem;
+      font-size: 20px;
 
       @media screen and (min-width: 1024px) {
         height: 45px;
